--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,3 +113,23 @@ form {
         gap: calc(var(--base-font-size) * 2);
     }
 }
+
+picture {
+    width: 375px;
+    height: 284px;
+}
+
+@media only screen and (min-width: 1440px) {
+    picture {
+        width: 400px;
+        height: 593px;
+    }
+}
+
+img {
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
